<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_update"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.push.penjadwalansesi.UpdateActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/upNIM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/nim" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/upNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/nama" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/upKelas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:hint="@string/kelas" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_marginLeft="3dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sesi"/>

    <RadioGroup
        android:id="@+id/radioSesi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radioPagi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pagi"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/radioSiang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siang"/>
        <RadioButton
            android:id="@+id/radioSore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sore"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnUbah"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ubah"/>

</LinearLayout>